--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <script>
-        console.log('HELLO WORLD')
+        function getComputerChoice() {
+            return (Math.random * 100)
+        }
+
+        console.log(getComputerChoice)
     </script>
 </body>
 </html>
