--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <script>
         function getComputerChoice() {
-            return (Math.random * 100)
+            let randomNumber =  Math.floor(Math.random() * 100) + 1
         }
 
-        console.log(getComputerChoice)
+        console.log(randomNumber)
     </script>
 </body>
 </html>
