--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <script>
         function getComputerChoice() {
             let randomNumber =  Math.floor(Math.random() * 100) + 1
+            console.log(randomNumber)
         }
 
-        console.log(randomNumber)
+        console.log(getComputerChoice())
     </script>
 </body>
 </html>
