--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
         function getComputerChoice() {
             let randomNumber =  Math.floor(Math.random() * 100) + 1
             console.log(randomNumber)
+        
+            if (randomNumber >= 0 && randomNumber <= 33) {
+                console.log("Paper") }
+            else if (randomNumber >= 34 && randomNumber <= 66) {
+                console.log("Rock") }
+            else {console.log("Scissors")}
         }
-
-        console.log(getComputerChoice())
+        getComputerChoice()
     </script>
 </body>
 </html>
