--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             else {console.log("Scissors")}
         }
         getComputerChoice()
+
+        function getHumanChoice() {
+            prompt("Choose rock, paper or scissors")
+        }
+        getHumanChoice()
     </script>
 </body>
 </html>
