--- a/index.html
+++ b/index.html
@@ -7,21 +7,32 @@
 </head>
 <body>
     <script>
+        function getHumanChoice() {
+            let choice = prompt("Choose rock, paper or scissors")
+
+            if (choice.toLowerCase() === 'rock') {
+                console.log('You chose Rock') }
+            else if (choice.toLowerCase() === 'paper') {
+                console.log('You chose Paper') }
+            else if (choice.toLowerCase() === 'scissors') {
+                console.log('You chose Scissorrs') }
+            else {
+                alert('Please choose again')
+                let choice = prompt("Choose rock, paper or scissors") }
+        }
+        getHumanChoice()
+
         function getComputerChoice() {
             let randomNumber =  Math.floor(Math.random() * 100) + 1
         
             if (randomNumber >= 0 && randomNumber <= 33) {
-                console.log("Paper") }
+                console.log("Computer chose Paper") }
             else if (randomNumber >= 34 && randomNumber <= 66) {
-                console.log("Rock") }
-            else {console.log("Scissors")}
+                console.log("Computer chose Rock") }
+            else {console.log("Computer chose Scissors")}
         }
         getComputerChoice()
 
-        function getHumanChoice() {
-            prompt("Choose rock, paper or scissors")
-        }
-        getHumanChoice()
     </script>
 </body>
 </html>
