--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     <script>
         function getHumanChoice() {
             let choice = prompt("Choose rock, paper or scissors")
+            
+            if (choice != 'rock', 'paper', 'scissors')
+                while (choice != 'rock', 'paper', 'scissors') {
+                    alert('Please choose again')
+                    let choice = prompt("Choose rock, paper or scissors") }
+                if (choice = 'rock', 'paper', 'scissors')
+                break;
 
-            if (choice.toLowerCase() === 'rock') {
+            else if (choice.toLowerCase() === 'rock') {
                 console.log('You chose Rock') }
             else if (choice.toLowerCase() === 'paper') {
                 console.log('You chose Paper') }
             else if (choice.toLowerCase() === 'scissors') {
                 console.log('You chose Scissorrs') }
-            else {
-                alert('Please choose again')
-                let choice = prompt("Choose rock, paper or scissors") }
         }
         getHumanChoice()
 
