--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
         function getHumanChoice() {
             let choice = prompt("Choose rock, paper or scissors")
             
-            if (choice != 'rock', 'paper', 'scissors')
+            if (choice != 'rock', 'paper', 'scissors') {
                 while (choice != 'rock', 'paper', 'scissors') {
                     alert('Please choose again')
                     let choice = prompt("Choose rock, paper or scissors") }
-                if (choice = 'rock', 'paper', 'scissors')
-                break;
-
+                if (choice = 'rock', 'paper', 'scissors'); }
             else if (choice.toLowerCase() === 'rock') {
-                console.log('You chose Rock') }
+                console.log('You chose Rock'); }
             else if (choice.toLowerCase() === 'paper') {
-                console.log('You chose Paper') }
+                console.log('You chose Paper'); }
             else if (choice.toLowerCase() === 'scissors') {
-                console.log('You chose Scissorrs') }
+                console.log('You chose Scissors'); }
         }
         getHumanChoice()
 
