--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 while (choice != 'rock', 'paper', 'scissors') {
                     alert('Please choose again')
                     let choice = prompt("Choose rock, paper or scissors") }
-                if (choice = 'rock', 'paper', 'scissors'); }
+                if (choice === 'rock', 'paper', 'scissors')
+                    return; }
             else if (choice.toLowerCase() === 'rock') {
                 console.log('You chose Rock'); }
             else if (choice.toLowerCase() === 'paper') {
