--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
         function getHumanChoice() {
             let choice = prompt("Choose rock, paper or scissors")
             
-            if (choice != 'rock', 'paper', 'scissors') {
-                while (choice != 'rock', 'paper', 'scissors') {
-                    alert('Please choose again')
-                    let choice = prompt("Choose rock, paper or scissors") }
-                if (choice === 'rock', 'paper', 'scissors')
-                    return; }
-            else if (choice.toLowerCase() === 'rock') {
-                console.log('You chose Rock'); }
+            while (choice != "rock" || "paper" || "scissors")
+                alert ("Please choose again.")
+                choice = prompt("Choose rock, paper or scissors")
+            if (choice.toLowerCase() === 'rock') {
+                    console.log('You chose Rock') }
             else if (choice.toLowerCase() === 'paper') {
-                console.log('You chose Paper'); }
-            else if (choice.toLowerCase() === 'scissors') {
-                console.log('You chose Scissors'); }
-        }
+                    console.log('You chose Paper') }
+            else if (choice.toLowerCase() === 'rock') {
+                    console.log('You chose Rock') }
+        
+        } 
         getHumanChoice()
 
         function getComputerChoice() {
