--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     console.log('You chose Rock') }
             else if (choice.toLowerCase() === 'paper') {
                     console.log('You chose Paper') }
-            else if (choice.toLowerCase() === 'rock') {
-                    console.log('You chose Rock') }
+            else if (choice.toLowerCase() === 'scissors') {
+                    console.log('You chose Scissors') }
         
         } 
         getHumanChoice()
