--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         function getHumanChoice() {
             let choice = prompt("Choose rock, paper or scissors")
             
-            if (choice.toLowerCase() === 'rock') {
+            if (choice === 'rock') {
                 return("rock")    
                 console.log('You chose Rock') }
             else if (choice.toLowerCase() === 'paper') {
