Testing choice variable.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         function getHumanChoice() {
             let choice = prompt("Choose rock, paper or scissors")
             
-            if (choice === 'rock') {
+            if (choice === "rock") {
                 return("rock")    
-                console.log('You chose Rock') }
+                console.log("You chose Rock") }
             else if (choice.toLowerCase() === 'paper') {
                 return("paper")    
                 console.log('You chose Paper') }
