--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
 
         //Play round
         function playRound(humanChoice, computerChoice) {
-            if (humanSelection === 'rock' && compSelection === "paper") {
+            if (humanSelection === "rock" && compSelection === "paper") {
                 return "You lose! Rock loses to paper";
                 compScore += 1; 
-            } else if (humanSelection === 'rock' && compSelection === "scissors") {
+            } else if (humanSelection === "rock" && compSelection === "scissors") {
                 return "You win! Rock beats scissors";
                 humanScore += 1;
-            } else if (humanSelection === 'paper' && compSelection === "scissors") {
+            } else if (humanSelection === "paper" && compSelection === "scissors") {
                 return "You lose! Paper loses to scissors";
                 compScore += 1; 
-            } else if (humanSelection === 'paper' && compSelection === "rock") {
+            } else if (humanSelection === "paper" && compSelection === "rock") {
                 return "You win! Paper beats rock";
                 humanScore += 1; 
-            } else if (humanSelection === 'scissors' && compSelection === "rock") {
+            } else if (humanSelection === "scissors" && compSelection === "rock") {
                 return "You lose! Scissors loses to rock";
                 compScore += 1;
-            } else if(humanSelection === 'scissors' && compSelection === "paper") {
+            } else if(humanSelection === "scissors" && compSelection === "paper") {
                 return "You Win! Scissors beats paper";
                 compScore += 1; 
             } else {
