--- a/index.html
+++ b/index.html
@@ -76,10 +76,15 @@
         const humanSelection = getHumanChoice();
         const compSelection = getComputerChoice();
 
-        playRound(humanSelection, compSelection);
 
-        
+        //Play game (Best of 5)
+        function playGame() {
+            for (let i = 0; i < 5; i++) {
+                playRound(humanSelection, compSelection);
+                
+            }
 
+        }
 
     </script>
 </body>
