--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         //Play round
         function playRound(humanChoice, computerChoice) {
             if (humanSelection === "rock" && compSelection === "paper") {
-                consele.log("You lose! Rock loses to paper");
+                console.log("You lose! Rock loses to paper");
                 compScore += 1; 
             } else if (humanSelection === "rock" && compSelection === "scissors") {
                 console.log("You win! Rock beats scissors");
