--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 
         //Play round
         function playRound(humanChoice, computerChoice) {
-            let humanSelection = getHumanChoice();
-            let compSelection = getComputerChoice();
-
             if (humanSelection === "rock" && compSelection === "paper") {
                 console.log("You lose! Rock loses to paper");
                 compScore += 1; 
@@ -70,6 +67,8 @@
             } 
             
         }
+        var humanSelection = getHumanChoice();
+        var compSelection = getComputerChoice();
 
         //Play game (Best of 5)
         function playGame() {
