Updated playGame variable.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     console.log("You have drawn.");
                 }
             }
+        winner()
         }
 
         playGame();
